--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				-webkit-transition: 0.5s;
 			}
 			#odai {
-				font-size: 30px;
+				font-size: 20px;
 			}
 			#input {
 				position: fixed;
@@ -140,8 +140,8 @@
 			<br><br>
 			<span id="odai"><strong>お題 : ひまな時、何をする？</strong></span><br>
 			<span id="awards">選ばれた投稿の投稿者には５万円！</span><br><br>
-			<input id="username" type="text" placeholder="Name" value="無名さん" class="texput"><br/><br>
-			<input id="text" type="text" placeholder="Message" class="texput"><br><br>
+			<input id="username" type="text" placeholder="ニックネーム" value="無名さん" class="texput"><br/><br>
+			<input id="text" type="text" placeholder="答え" class="texput"><br><br>
 			<button id="post" class="btn purp">Post</button><br/>
 			<br>
 		</div>
