--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 		<div style="text-align: center;" id="input">
 			<br><br>
 			<span id="odai"><strong>お題 : ひまな時、何をする？</strong></span><br>
-			<span id="awards">選ばれた投稿の投稿者には５万円！</span><br><br>
+			<span id="awards">選ばれた投稿の投稿者には<strong>５万円</strong>！</span><br><br>
 			<input id="username" type="text" placeholder="ニックネーム" value="無名さん" class="texput"><br/><br>
 			<input id="text" type="text" placeholder="答え" class="texput"><br><br>
 			<button id="post" class="btn purp">Post</button><br/>
