--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 		<div id="results"></div>
 		<div id="scrollis">©2017 BitFinity Inc</div>
 		<script>
+			window.scrollTo(0,document.body.scrollHeight);
 			var myFirebase = new Firebase('https://honne-a16b2.firebaseio.com/');
 			var usernameInput = document.querySelector('#username');
 			var textInput = document.querySelector('#text');
