--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no">
 		<script src='https://cdn.firebase.com/js/client/2.4.0/firebase.js'></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<meta name="description" content="HonNe!で無名の状態で「お題」に答える自由・新感覚なチャットサイト!">
 		<style>
 			body {
 				background: #fafbfc;
