--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				transition: 0.5s;
 				-webkit-transition: 0.5s;
 			}
-			.btn {
+			.btn, button {
 				-webkit-appearance: button;
 				padding: 3px 10px;
 				font-size: 12px;
@@ -136,6 +136,7 @@
 				width: 100%;
 				background: #f1f1f1;
 				box-shadow: 0px 5px 5px #888888;
+				z-index: 500;
 			}
 			#results {
 				margin-top: 350px;
@@ -182,8 +183,8 @@
 			var startListening = function() {
 				myFirebase.on('child_added', function(snapshot) {
 					var msg = snapshot.val();
-					var msgUsernameElement = document.createElement("b");
-					msgUsernameElement.textContent = msg.username;
+					var msgUsernameElement = document.createElement("button");
+					msgUsernameElement.textContent = msg.username + "(id:" + msg.id +")";
 					
 					var msgTextElement = document.createElement("p");
 					msgTextElement.textContent = msg.text;
