--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
 			<br>
 			<span id="odai"><strong>お題 : ひまな時、何をする？</strong></span><br>
 			<span id="awards">選ばれた投稿の投稿者には５万円！</span><br><br>
-			<input id="username" type="text" placeholder="ニックネーム" value="無名さん" class="texput"><br/><br>
+			<div id="ussis"><input id="username" type="text" placeholder="ニックネーム" value="無名さん" class="texput"><br/><br></div>
 			<input id="text" type="text" placeholder="答え" class="texput"><br><br>
-			<input id="idbill" type="text" placeholder="ID (オプショナル：返信・いいね・稼ぐの機能が使えます)" class="texput"><br/><br>
+			<div id="billis"><input id="idbill" type="text" placeholder="ID (オプショナル：返信・いいね・稼ぐの機能が使えます)" class="texput"><br/><br></div>
 			<form action="#scrollis">
 				<input type="submit" id="post" class="btn purp" value="投稿"><br/>
 			</form>
@@ -177,7 +177,8 @@
 				
 				myFirebase.push({username:msgUser, text:msgText, id:idText});
 				textInput.value = "";
-				document.getElementById("idbill").style.display = "none";
+				document.getElementById("billis").style.display = "none";
+				document.getElementById("ussis").style.display = "none";
 			});
 			
 			var startListening = function() {
