--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 			<br>
 			<span id="odai"><strong>お題 : ひまな時、何をする？</strong></span><br>
 			<span id="awards">選ばれた投稿の投稿者には５万円！</span><br><br>
-			<div id="ussis"><input id="username" type="text" placeholder="ニックネーム" value="無名さん" class="texput"><br/><br></div>
+			<div id="ussis"><input id="username" type="text" placeholder="ニックネーム" value="HonNeの無名さん" class="texput"><br/><br></div>
 			<input id="text" type="text" placeholder="答え" class="texput"><br><br>
 			<div id="billis"><input id="idbill" type="text" placeholder="ID (オプショナル：返信・いいね・稼ぐの機能が使えます)" class="texput"><br/><br></div>
 			<form>
