--- a/index.html
+++ b/index.html
@@ -152,9 +152,7 @@
 			<div id="ussis"><input id="username" type="text" placeholder="ニックネーム" value="無名さん" class="texput"><br/><br></div>
 			<input id="text" type="text" placeholder="答え" class="texput"><br><br>
 			<div id="billis"><input id="idbill" type="text" placeholder="ID (オプショナル：返信・いいね・稼ぐの機能が使えます)" class="texput"><br/><br></div>
-			<form>
-				<input type="submit" id="post" class="btn purp" value="投稿"><br/>
-			</form>
+			<button id="post" class="btn purp">投稿</button><br>
 			<br>
 		</div>
 		<div id="results"></div>
