--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 			<span id="odai"><strong>お題 : ひまな時、何をする？</strong></span><br>
 			<span id="awards">選ばれた投稿の投稿者には５万円！</span><br><br>
 			<div id="ussis"><input id="username" type="text" placeholder="ニックネーム" value="無名さん" class="texput"><br/><br></div>
-			<div id="mesi"><select id="mesype" class="btn sharehaf"><option value="投稿：">種類を選択</option><option value="回答：">回答</option><option value="チャット：">チャット</option><option value="＜＜質問＞＞">質問</option><option value="（つぶやき）">つぶやき</option><option value="「お知らせ！」">お知らせ</option></select><input id="text" type="text" placeholder="投稿内容" class="texput sharehaf"><br><br></div>
+			<div id="mesi"><select id="mesype" class="btn sharehaf"><option value="投稿：">種類を選択</option><option value="回答：">回答</option><option value="質問投稿への回答：">質問投稿への回答</option><option value="チャット：">チャット</option><option value="＜＜質問＞＞">質問</option><option value="（つぶやき）">つぶやき</option><option value="「お知らせ！」">お知らせ</option></select><input id="text" type="text" placeholder="投稿内容" class="texput sharehaf"><br><br></div>
 			<div id="billis"><input id="idbill" type="text" placeholder="ID (オプショナル：返信・いいね・稼ぐの機能が使えます)" class="texput"><br/><br></div>
 			<button id="post" class="btn purp">投稿</button><br>
 			<br>
