--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>HonNet - 無名の自分だからこその答えをお題に投稿するSNS・チャットサイト！</title>
+		<title>HonNet - アカウントがいらないチャット・掲示板SNSサイト</title>
 		<meta name="viewport" content="width=device-width, user-scalable=no">
 		<script src='https://cdn.firebase.com/js/client/2.4.0/firebase.js'></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		<meta name="description" content="HonNe!で無名の状態で「お題」に答える自由・新感覚なチャットサイト!">
+		<meta name="description" content="HonNe!で無名の状態で「お題」に答える自由・新感覚なアカウントがいらないチャット・掲示板SNSサイト!">
 		<link rel="apple-touch-icon" href="HonNe!.png">
 		<meta name="apple-mobile-web-app-title" content="HonNet">
 		<meta name="apple-mobile-web-app-capable" content="yes">
